uploaded to netlify

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
       <div id="logo">The Golf Blog</div>
-      <input type="checkbox" id="navToggle" class="navToggle" />
+      <input type="checkbox" id="navToggle" class="navToggle" onclick="" />
       <nav>
         <ul>
           <li><a href="index.html" class="current">Home</a></li>
@@ -25,8 +25,27 @@
       </label>
     </header>
     <main>
-      <div id="putterImg"><img src="images/testheader.jpg" alt="" /></div>
+      <div id="putterImg"></div>
       <h1>Last Posts</h1>
+      <div class="blogContainer">
+        <div class="arrow" id="leftArrow"><</div>
+        <div class="latestBlog">
+          <img src="images/courtney-cook-SsIIw_MET0E-unsplash.jpg" alt="" />
+          <h2>Outdrive your friends with these simple techniques</h2>
+          <p>Read More</p>
+        </div>
+        <div class="latestBlog">
+          <img src="images/courtney-cook-SsIIw_MET0E-unsplash.jpg" alt="" />
+          <h2>Outdrive your friends with these simple techniques</h2>
+          <p>Read More</p>
+        </div>
+        <div class="latestBlog">
+          <img src="images/courtney-cook-SsIIw_MET0E-unsplash.jpg" alt="" />
+          <h2>Outdrive your friends with these simple techniques</h2>
+          <p>Read More</p>
+        </div>
+        <div class="arrow" id="rightArrow">></div>
+      </div>
     </main>
   </body>
 </html>
