--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     </header>
     <main>
       <div id="putterImg"></div>
-      <h1>Last Posts</h1>
+      <h1>Latest Posts</h1>
       <div class="blogContainer">
         <div class="arrow" id="leftArrow"><</div>
         <div class="latestBlog">
-          <img src="images/courtney-cook-SsIIw_MET0E-unsplash.jpg" alt="" />
+          <img src="images/pebblebeach.jpg" alt="" />
           <h2>Outdrive your friends with these simple techniques</h2>
           <p>Read More</p>
         </div>
