--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
               Must contain at least 25 characters
             </div>
           </div>
-          <button>Send Message</button>
+          <button>Send</button>
         </form>
       </div>
     </main>
