added show more button

--- a/blog.html
+++ b/blog.html
@@ -27,6 +27,7 @@
     <main>
       <h1>Blog Posts</h1>
       <div class="blogContainer"></div>
+      <button class="moreButton">Show More</button>
     </main>
     <script src="JS/blog.js"></script>
   </body>
