--- a/article.html
+++ b/article.html
@@ -25,6 +25,11 @@
       </label>
     </header>
     <main>
+      <div class="modalImg">
+        <div class="closeModal" onclick="closeModal()">
+          <span class="close">&times;</span>
+        </div>
+      </div>
       <div class="blogPost"></div>
     </main>
     <script src="JS/article.js"></script>
