--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <div id="logo">The Golf Blog</div>
+      <a href="index.html"><div id="logo">The Golf Blog</div></a>
       <input type="checkbox" id="navToggle" class="navToggle" onclick="" />
       <nav>
         <ul>
