--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <header>
-      <div id="logo">The Golf Blog</div>
+      <a href="index.html"><div id="logo">The Golf Blog</div></a>
       <input type="checkbox" id="navToggle" class="navToggle" onclick="" />
       <nav>
         <ul>
@@ -27,7 +27,7 @@
     <main>
       <div id="putterImg"></div>
       <h1>Latest Posts</h1>
-      <div class="loader">test</div>
+      <div class="loader"></div>
       <div class="blogContainer">
         <div class="arrow" id="leftArrow" onclick="prev()"><</div>
         <div class="blogCards"></div>
