--- a/article.html
+++ b/article.html
@@ -30,7 +30,7 @@
           <span class="close">&times;</span>
         </div>
       </div>
-      <div class="blogPost"></div>
+      <div class="blogPost"><div class="loader"></div></div>
     </main>
     <script src="JS/article.js"></script>
   </body>
