--- a/blog.html
+++ b/blog.html
@@ -26,7 +26,7 @@
     </header>
     <main>
       <h1>Blog Posts</h1>
-      <div class="blogContainer"></div>
+      <div class="blogContainer"><div class="loader"></div></div>
       <button class="moreButton">Show More</button>
     </main>
     <script src="JS/blog.js"></script>
