--- a/about.html
+++ b/about.html
@@ -28,15 +28,6 @@
       <h1>About Us</h1>
       <img src="images/about1.jpg" alt="Golf ball on green grass in the sun" />
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis feugiat,
-        nulla at tempor gravida, enim odio dictum nisl, eget bibendum sapien
-        orci in odio. Vivamus scelerisque dolor ac urna rutrum molestie quis nec
-        tortor. Nulla vel leo feugiat, semper neque vel, vestibulum mauris. Nunc
-        eu placerat libero. Sed a ligula purus. Donec in lacus ac ligula
-        fringilla faucibus. Pellentesque ac dolor metus. Mauris tincidunt mattis
-        velit, id iaculis tellus dictum ut.
-      </p>
-      <p>
         Pellentesque ipsum libero, imperdiet vitae leo eu, scelerisque sodales
         sapien. Nullam at felis et lectus porta interdum a vel neque. Morbi sit
         amet urna id erat ultrices mollis. Integer et semper odio. Pellentesque
@@ -50,18 +41,7 @@
         libero, varius id risus sed, volutpat rhoncus turpis.
       </p>
       <img src="images/about2.jpg" alt="Man playing golf in the sunset" />
-      <p>
-        Curabitur tempus, lorem nec consequat tempor, lorem neque facilisis
-        justo, nec sagittis turpis libero ac velit. Nullam tincidunt fringilla
-        justo. Vivamus at risus felis. Donec non tellus tortor. Vivamus eu nisi
-        libero. Suspendisse a nisi ultrices orci rutrum aliquet. Vivamus in odio
-        semper sem malesuada iaculis. Maecenas ultricies, turpis quis maximus
-        vestibulum, ipsum tellus semper risus, sed congue sapien ex non tellus.
-        Maecenas mollis convallis neque vel semper. Nulla facilisi. Nulla
-        facilisi. Fusce sit amet ante a lectus vulputate mattis. Phasellus
-        pulvinar quam vel est tincidunt ornare. Fusce ut egestas ipsum.
-        Vestibulum vulputate est nec dignissim suscipit.
-      </p>
+      <a href="contact.html" class="contactButton">Contact Us</a>
     </main>
   </body>
 </html>
