--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>The Golf Blog</title>
+    <meta
+      name="Welcome to The Golf Blog. Explore our blog and find a range of articles about the sport we love, golf!"
+      content="This is the homepage for The Golf Blog"
+    />
     <link rel="stylesheet" href="styles/header.css" />
     <link rel="stylesheet" href="styles/index.css" />
   </head>
