--- a/about.html
+++ b/about.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>About Us</title>
+    <meta
+      name="We in The Golf Blog are a couple of friends that love the sport of golf, and writes articles that cover a lot of different topics in golf"
+      content="This is the about page for The Golf Club"
+    />
     <link rel="stylesheet" href="styles/header.css" />
     <link rel="stylesheet" href="styles/about.css" />
   </head>
