--- a/article.html
+++ b/article.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Article</title>
+    <meta
+      name="Hope this was an interesting article. Feel free to contact us if there is any topics you want us to cover"
+      content="This is the page for articles at The Golf Club"
+    />
     <link rel="stylesheet" href="styles/header.css" />
     <link rel="stylesheet" href="styles/article.css" />
   </head>
