--- a/blog.html
+++ b/blog.html
@@ -4,7 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Blog Posts</title>
+    <meta
+      name="Here you can find a range of articles and learn about everything from different products, golf courses and tips and tricks about golf"
+      content="This is the page for all our articles at The Golf Blog"
+    />
     <link rel="stylesheet" href="styles/header.css" />
     <link rel="stylesheet" href="styles/blog.css" />
   </head>
